--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "drizzle-orm": "^0.34.1",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.6.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
